--- a/CHello/package.json
+++ b/CHello/package.json
@@ -1,4 +1,5 @@
 {
+  "main": "public/electron.js",
   "name": "chello",
   "version": "0.1.0",
   "private": true,
@@ -6,23 +7,20 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.7",
-    "electron": "^19.0.4",
-    "firebase": "^9.8.3",
-    "postcss": "^8.4.14",
+    "firebase": "^9.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "main": "src/main.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron": "electron ."
+    "dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
+    "electron": "wait-on tcp:3000 && electron ."
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +41,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.1.3"
+    "concurrently": "^7.2.2",
+    "electron": "^19.0.7",
+    "tailwindcss": "^3.1.4",
+    "wait-on": "^6.0.1"
   }
 }
